Progress on file transfer (after amazing discoveries with Gerralt)